--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 
                 <ul class="project-non list">
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_1_1.jpg" alt="Banking app interface concept"
                                 width="360" height="300">
@@ -67,7 +67,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_1_2.jpg" alt="Cashless Payment" width="360"
                                 height="300">
@@ -78,7 +78,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_1_3.jpg" alt="Meditation app" width="360"
                                 height="300">
@@ -89,7 +89,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_2_1.jpg" alt="Taxi Service" width="360"
                                 height="300">
@@ -100,7 +100,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_2_2.jpg" alt="Screen illustrationst" width="360"
                                 height="300">
@@ -111,7 +111,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_2_3.jpg" alt="Online courses" width="360"
                                 height="300">
@@ -122,7 +122,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_3_1.jpg" alt="Instagram stories concept"
                                 width="360" height="300">
@@ -133,7 +133,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_3_2.jpg" alt="Organic food" width="360"
                                 height="300">
@@ -144,7 +144,7 @@
                         </a>
                     </li>
                     <li class="prj-item">
-                        <a href=" " class="item-project link hover-shad">
+                        <a href=" " class="item-project link hoverln-shad">
 
                             <img src="./images/Portfolio/ProjectCard_3_3.jpg" alt="Fresh coffee" width="360"
                                 height="300">
@@ -165,9 +165,10 @@
 
 
     <!--Футер-->
-    <footer class="footer">
+    <footer>
+
         <div class="container">
-            <div class="footmain">
+            <div class="footer">
                 <div class="footinfo">
                     <a href="./index.html" class="logo link">web<span class="footer-logo">Studio</span></a>
                     <p class="footer-text">
@@ -176,38 +177,39 @@
                     </p>
                 </div>
                 <div class="footink">
-                    <h2 class="foot-title">Social media</h2>
+                    <p class="foot-title">Social media</p>
                     <ul class="social-list list">
                         <li>
                             <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" widht="24" height="24">
+                                <svg class="socisl-list-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-Inst"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" widht="24" height="24">
+                                <svg class="socisl-list-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" widht="24" height="24">
+                                <svg class="socisl-list-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" widht="24" height="24">
+                                <svg class="socisl-list-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
                 </div>
+
             </div>
         </div>
     </footer>
