--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </li>
                     <li class="features-item">
                         <div class="frame-icon">
-                            <svg class="features-icon" width="64">
+                            <svg class="features-icon" width="64" height="64">
                                 <use href="./images/icon.svg#icon-clock-1"></use>
                             </svg>
                         </div>
@@ -87,7 +87,7 @@
                     </li>
                     <li class="features-item">
                         <div class="frame-icon">
-                            <svg class="features-icon" width="64">
+                            <svg class="features-icon" width="64" height="64">
                                 <use href="./images/icon.svg#icon-diagram-1"></use>
                             </svg>
                         </div>
@@ -98,7 +98,7 @@
                     </li>
                     <li class="features-item">
                         <div class="frame-icon">
-                            <svg class="features-icon" width="64">
+                            <svg class="features-icon" width="64" height="64">
                                 <use href="./images/icon.svg#icon-astronaut-1"></use>
                             </svg>
                         </div>
@@ -139,30 +139,30 @@
                             <h3 class="card-title">Mark Guerrero</h3>
                             <p class="card-text">Product Designer</p>
                             <ul class="social-list list">
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-Inst"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
@@ -176,30 +176,30 @@
                             <h3 class="card-title">Tom Ford</h3>
                             <p class="card-text">Frontend Developer</p>
                             <ul class="social-list list">
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-Inst"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
@@ -213,30 +213,30 @@
                             <h3 class="card-title">Camila Garcia</h3>
                             <p class="card-text">Marketing</p>
                             <ul class="social-list list">
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-Inst"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
@@ -250,30 +250,30 @@
                             <h3 class="card-title">Daniel Wilson</h3>
                             <p class="card-text">UI Designer</p>
                             <ul class="social-list list">
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-Inst"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-twitter-1"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-facebook-1"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="sc-item">
                                     <a href="#" class="social-item">
-                                        <svg class="socisl-list-icon" widht="16" height="16">
+                                        <svg class="socisl-list-icon" width="16" height="16">
                                             <use href="./images/icon.svg#icon-linkedin-1"></use>
                                         </svg>
                                     </a>
@@ -291,42 +291,42 @@
                 <ul class="customer-list list">
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
-                            <svg class="icon-cust" widht="104" height="56">
+                            <svg class="icon-cust" width="104" height="56">
                                 <use href="./images/icon.svg#icon-YaCo"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
-                            <svg class="icon-cust" widht="104" height="56">
+                            <svg class="icon-cust" width="104" height="56">
                                 <use href="./images/icon.svg#icon-Company"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
-                            <svg class="icon-cust" widht="104" height="56">
+                            <svg class="icon-cust" width="104" height="56">
                                 <use href="./images/icon.svg#icon-Company2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
-                            <svg class="icon-cust" widht="104" height="56">
+                            <svg class="icon-cust" width="104" height="56">
                                 <use href="./images/icon.svg#icon-Foster"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
-                            <svg class="icon-cust" widht="104" height="56">
+                            <svg class="icon-cust" width="104" height="56">
                                 <use href="./images/icon.svg#icon-Brand"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customer-item">
                         <a href="#" class="cust-link link">
-                            <svg class="icon-cust" widht="104" height="56">
+                            <svg class="icon-cust" width="104" height="56">
                                 <use href="./images/icon.svg#icon-TagLine"></use>
                             </svg>
                         </a>
@@ -357,28 +357,28 @@
                     <ul class="social-list list">
                         <li>
                             <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" widht="24" height="24">
+                                <svg class="socisl-list-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-Inst"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" widht="24" height="24">
+                                <svg class="socisl-list-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" widht="24" height="24">
+                                <svg class="socisl-list-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="social-item">
-                                <svg class="socisl-list-icon" widht="24" height="24">
+                                <svg class="socisl-list-icon" width="24" height="24">
                                     <use href="./images/icon.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
